fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -364,6 +364,7 @@ header nav a:hover {
     text-align: center;
     position: relative;
     box-shadow: 0px 1px 10px 1px var(--black);
+    overflow: hidden;
 }
 
 .slider {
@@ -728,11 +729,13 @@ header nav a:hover {
   align-items: center;
   justify-content: center;
   height: 75vh;
+  max-width: 100vw;
   background: var(--primary);
   color: var(--secondary);
   text-align: center;
   position: relative;
   box-shadow: 0px 1px 10px 1px var(--black);
+  overflow: hidden;
 
 }
 .project-hero img{
